# Linear-MPC-on-Quadrotors

./: 1-d_mpc.mat  LMPC.mat  LMPC.slx  LMPC.slxc  README.md  ball_balancing_platform.mat  ball_balancing_platform.slx  circle_actual_2024-02-17-13-29-28.bag  circle_plotter.m  lissajous_actual_2_2024-02-17-13-00-39.bag  lissajous_plotter.m  matlab.mat  my_sim.slx  my_sim.slx.original  my_sim.slxc  new.mat  rosbag_circle_plotter.m  rough.slx  spring_mass_damper.slx  spring_mass_damper_state_space.slx  test_plotter.m  untitled.slx  untitled.slxc
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
install/: local_setup.sh  setup.sh
shared/: my_sim.slxc  new.slxc  quadcopter_sim_1.slx  quadcopter_sim_1.slx.original  quadcopter_sim_1.slxc  rough.slx  rough.slxc
shared/devel/: .catkin  .rosinstall
shared/install/: _setup_util.py  setup.sh
shared/install/share/untitled/: package.xml
shared/my_sim_ert_rtw/: MW_target_hardware_resources.h  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  codertarget_assembly_flags.mk  ert_main.cpp  main.cpp  my_sim_data.cpp  my_sim_dt.h  my_sim_private.h  my_sim_targ_data_map.m  my_sim_types.h  rosModelInfo.mat  rtGetInf.cpp  rt_nonfinite.cpp  rt_nonfinite.h  rtw_proj.tmw  rtwtypeschksum.mat  slros_initialize.h
shared/rough_ert_rtw/: buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  ert_main.cpp  main.cpp  rosModelInfo.mat  rosnodeinterface.cpp  rough_targ_data_map.m  rough_types.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtmodel.h  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat  slros_busmsg_conversion.cpp  (+1 more)
(+375 files in other folders)
